[package]
name = "JobRunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-cron-scheduler="*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "*"
log = "*"
env_logger = "*"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }